@@ -134,7 +134,7 @@ public class JSONArray {
       case ']':
       case ')':
         if (q != c) {
-          throw x.syntaxError("Expected a '" + new Character(q) + "'");
+          throw x.syntaxError("Expected a '" + q + "'");
         }
         return;
       default:
@@ -570,7 +570,7 @@ public class JSONArray {
    * @return this.
    */
   public JSONArray put(double value) throws JSONException {
-    Double d = new Double(value);
+    Double d = value;
     JSONObject.testValidity(d);
     put(d);
     return this;
@@ -584,7 +584,7 @@ public class JSONArray {
    * @return this.
    */
   public JSONArray put(int value) {
-    put(new Integer(value));
+    put(Integer.valueOf(value));
     return this;
   }
 
@@ -596,7 +596,7 @@ public class JSONArray {
    * @return this.
    */
   public JSONArray put(long value) {
-    put(new Long(value));
+    put(Long.valueOf(value));
     return this;
   }
 
@@ -684,7 +684,7 @@ public class JSONArray {
    *           If the index is negative.
    */
   public JSONArray put(int index, int value) throws JSONException {
-    put(index, new Integer(value));
+    put(index, Integer.valueOf(value));
     return this;
   }
 
@@ -700,7 +700,7 @@ public class JSONArray {
    *           If the index is negative.
    */
   public JSONArray put(int index, long value) throws JSONException {
-    put(index, new Long(value));
+    put(index, Long.valueOf(value));
     return this;
   }
 
